docs/src/app/(docs)/react/components/combobox/demos/grouped/css-modules/index.module.css
.InputGroup {
  box-sizing: border-box;
  position: relative;
  width: 16rem;
  height: 2rem;
  border: 1px solid light-dark(var(--color-neutral-950), white);
  background-color: transparent;

  &:focus-within {
    outline: 2px solid var(--color-blue-800);
    outline-offset: -2px;
  }
}

.InputGroup:has(.Clear) .Input {
  padding-right: calc(0.5rem + 2rem * 2);
}

.Input {
  box-sizing: border-box;
  padding-left: 0.5rem;
  padding-right: calc(0.5rem + 2rem);
  margin: 0;
  border: none;
  width: 100%;
  height: 100%;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 400;
  background-color: transparent;
  color: light-dark(var(--color-neutral-950), white);
  outline: none;

  &:focus {
    outline: none;
  }
}

.Label {
  display: flex;
  flex-direction: column;
  gap: 0.25rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 700;
  color: light-dark(var(--color-neutral-950), white);
  position: relative;
}

.ActionButtons {
  box-sizing: border-box;
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  bottom: 0;
  height: 100%;
  right: 0;
  border: none;
  color: light-dark(var(--color-neutral-500), var(--color-neutral-400));
  padding: 0;
}

.Trigger,
.Clear {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 1.5rem;
  height: 100%;
  color: light-dark(var(--color-neutral-950), white);
  border: none;
  padding: 0;
  background: none;
}

.ClearIcon {
  width: 1rem;
  height: 1rem;
}

.TriggerIcon {
  width: 0.625rem;
  height: 0.625rem;
}

.Positioner {
  outline: 0;
}

.Popup {
  box-sizing: border-box;
  overflow: clip;
  background-color: light-dark(white, var(--color-neutral-950));
  color: light-dark(var(--color-neutral-950), white);
  width: var(--anchor-width);
  max-height: 23rem;
  max-width: var(--available-width);
  transition:
    opacity 0.1s,
    transform 0.1s;
  transform-origin: var(--transform-origin);

  &[data-starting-style],
  &[data-ending-style] {
    opacity: 0;
    transform: scale(0.95);
  }

  border: 1px solid light-dark(var(--color-neutral-950), white);
  box-shadow: 0.25rem 0.25rem 0 rgb(0 0 0 / 12%);

  @media (prefers-color-scheme: dark) {
    box-shadow: none;
  }
}

.List {
  box-sizing: border-box;
  overflow: auto;
  overscroll-behavior: contain;
  scroll-padding-top: 2.25rem;
  scroll-padding-bottom: 0.5rem;
  max-height: min(23rem, var(--available-height));
  outline: 0;
}

.Group {
  display: block;
  padding-bottom: 0.5rem;
}

.GroupLabel {
  box-sizing: border-box;
  padding: 0.5rem 0.5rem 0.25rem 1.75rem;
  font-size: 0.75rem;
  font-weight: 700;
  line-height: 1rem;
  color: light-dark(var(--color-neutral-500), var(--color-neutral-400));
  text-transform: uppercase;
  letter-spacing: 0.05em;
  background-color: light-dark(white, var(--color-neutral-950));
  position: sticky;
  z-index: 1;
  top: 0;
}

.Item {
  box-sizing: border-box;
  outline: 0;
  cursor: default;
  user-select: none;
  padding: 0.5rem;
  display: grid;
  grid-template-columns: 0.75rem 1fr;
  gap: 0.5rem;
  align-items: center;
  font-size: 0.875rem;
  line-height: 1rem;

  &[data-highlighted] {
    z-index: 0;
    position: relative;
    color: light-dark(white, var(--color-neutral-950));
  }

  &[data-highlighted]::before {
    content: '';
    z-index: -1;
    position: absolute;
    inset-block: 0;
    inset-inline: 0;
    background-color: light-dark(var(--color-neutral-950), white);
  }
}

.ItemIndicator {
  grid-column-start: 1;
}

.ItemIndicatorIcon {
  display: block;
  width: 0.75rem;
  height: 0.75rem;
}

.ItemText {
  grid-column-start: 2;
}

.Empty {
  box-sizing: border-box;
  padding: 1rem 1rem 1rem 0.5rem;
  font-size: 0.875rem;
  line-height: 1rem;
  color: light-dark(var(--color-neutral-500), var(--color-neutral-400));
}

